[gd_scene load_steps=2 format=2]

[ext_resource path="res://mainUI/SizePicker.gd" type="Script" id=1]

[node name="SizePicker" type="GridContainer"]
margin_right = 120.0
margin_bottom = 52.0
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Width" type="Label" parent="."]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Width"

[node name="WidthSpinBox" type="SpinBox" parent="."]
margin_left = 46.0
margin_right = 120.0
margin_bottom = 24.0
mouse_filter = 1
min_value = 1.0
max_value = 1024.0
value = 1.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_SPACE" type="Control" parent="."]
margin_top = 28.0
margin_right = 42.0
margin_bottom = 52.0

[node name="AspectCheckButton" type="CheckBox" parent="."]
margin_left = 46.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 52.0
text = "aspect"

[node name="Height" type="Label" parent="."]
margin_top = 61.0
margin_right = 42.0
margin_bottom = 75.0
size_flags_horizontal = 3
text = "Height"

[node name="HeightSpinBox" type="SpinBox" parent="."]
margin_left = 46.0
margin_top = 56.0
margin_right = 120.0
margin_bottom = 80.0
mouse_filter = 1
min_value = 1.0
max_value = 1024.0
value = 1.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="WidthSpinBox" to="." method="_on_WidthSpinBox_value_changed"]
[connection signal="toggled" from="AspectCheckButton" to="." method="_on_AspectCheckButton_toggled"]
[connection signal="value_changed" from="HeightSpinBox" to="." method="_on_HeightSpinBox_value_changed"]
